<resources>
    <string name="app_name">Homework2_GroupB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="find_your_gadget">Find your \nGadget</string>
    <string name="welcome_back">Welcome \nback</string>
    <string name="get_started">Get started</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="my_profile">My Profile</string>

    <string name="login">Login</string>
    <string name="forgot_passcode">Forgot passcode?</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="be_ready_to_join">Be ready \nto join</string>

    <string name="search">Search</string>
    <string name="home_title">Order online \ncollect in store</string>
    <string name="add_product">Add Product</string>
    <string name="most_liked_products">Most Liked Products</string>
    <string name="image_of_product">Image of product</string>

    <string name="price">$%d</string>
    <string name="favorite_count"> - %d Likes</string>
    <string name="search_not_founded_image">Search not founded image</string>
    <string name="item_not_found">Item not found</string>
    <string name="try_a_more_generic_search_term_or_try_n_looking_for_alternative_products">Try a more generic search term or try\n looking for alternative products.</string>
    <string name="wearable">Wearable</string>
    <string name="laptops">Laptops</string>
    <string name="phones">Phones</string>
    <string name="tablets">Tablets</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="go_to_home_arrow">Go to home arrow</string>
    <string name="save">Save</string>
    <string name="price_text">Price</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="top_5">Top 5</string>
    <string name="wearabler">wearable</string>
    <string name="tablet">tablet</string>
    <string name="phone">phone</string>
    <string name="laptop">laptop</string>
    <string name="welcome_to_teamb">Welcome \nto TeamB</string>
    <string name="next">Next</string>
    <string name="surname">Surname</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>