<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:context=".view.home.HomeFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_add_product"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/iv_add_product"
                    android:src="@drawable/ic_add"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_product_image" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                app:defaultQueryHint="@string/search"
                android:background="@drawable/bg_et_search"
                android:hint="@string/search"
                android:textColorHint="@color/dark_secondary"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_add_product"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/home_title"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sv_search" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_home_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                app:checkedChip="@+id/id_selected_chip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_title"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_wearable"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/raleway"
                    android:text="@string/wearable" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_laptops"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:text="@string/laptops" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_phones"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:text="@string/phones" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_tablets"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:text="@string/tablets" />

            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_category_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cg_home_category" />

            <TextView
                android:id="@+id/tv_most_liked_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/raleway"
                android:text="@string/most_liked_products"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_home_category_item" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_most_liked_products"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_most_liked_products" />

<!---Search-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="32dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sv_search" />

            <ImageView
                android:id="@+id/iv_item_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/search_not_founded_image"
                android:src="@drawable/ic_search"
                android:translationZ="2dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sv_search" />

            <TextView
                android:id="@+id/tv_title_item_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/item_not_found"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:translationZ="2dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_item_not_found" />

            <TextView
                android:id="@+id/tv_desc_item_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/raleway"
                android:text="@string/try_a_more_generic_search_term_or_try_n_looking_for_alternative_products"
                android:textAlignment="center"
                android:translationZ="2dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_item_not_found" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>