<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5E5E5"
        tools:context=".view.user.UserInformationFragment">
        <ImageButton
            android:id="@+id/imageBtn_arrow_left"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/profile_arrow_left"
            android:layout_marginStart="2dp"
            android:backgroundTint="#E5E5E5"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/text_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/raleway_medium"
            android:text="Fill in your bio to get started"
            android:textAlignment="center"
            android:textColor="@color/profile_text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/imageBtn_arrow_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_medium"
            android:text="This data will be displayed in your profile for security"
            android:textColor="@color/profile_text_color"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_fill" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/username"
            app:hintTextColor="@color/profile_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_information">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eText_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/raleway_medium" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/name"
            app:hintTextColor="@color/profile_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eText_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/raleway_medium" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_surname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/surname"
            app:hintTextColor="@color/profile_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eText_surname"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Phone Number"
            app:hintTextColor="@color/profile_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eText_phone_number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Address"
            app:hintTextColor="@color/profile_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_phoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eText_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:inputType="textImeMultiLine" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:backgroundTint="#5956E9"
            android:src="@drawable/bg_firs_on_board_button"
            android:text="NEXT"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>